[gd_scene load_steps=3 format=3 uid="uid://bxk3c8n4xgiar"]

[ext_resource type="Script" path="res://scripts/farming_game.gd" id="1_farming_script"]
[ext_resource type="Texture2D" path="res://assets/farm-scene.jpg" id="2_farm_bg"]

[node name="FarmingGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_farming_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_farm_bg")
expand_mode = 1
stretch_mode = 5

[node name="DarkOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlantPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(250, 0)

[node name="FieldPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="UIPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(200, 0)

[node name="ScoreContainer" type="Panel" parent="MainContainer/UIPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="ScoreLabel" type="RichTextLabel" parent="MainContainer/UIPanel/ScoreContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "[center][b]Score: 0[/b][/center]"
fit_content = true
scroll_active = false

[node name="Spacer" type="Control" parent="MainContainer/UIPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="MainContainer/UIPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "‚Üê Back to Farm"
